--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="img_chania.jpg" alt="Chania" width="460" height="345">
+                <img src="https://placeimg.com/640/480/tech" alt="Chania" width="460" height="345">
             </div>
 
             <div class="item">
-                <img src="img_chania2.jpg" alt="Chania" width="460" height="345">
+                <img src="https://placeimg.com/640/480/nature" alt="Chania" width="460" height="345">
             </div>
 
             <div class="item">
-                <img src="img_flower.jpg" alt="Flower" width="460" height="345">
+                <img src="https://placeimg.com/640/480/arch" alt="Flower" width="460" height="345">
             </div>
 
             <div class="item">
-                <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+                <img src="https://placeimg.com/640/480/people" alt="Flower" width="460" height="345">
             </div>
         </div>
 
