--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
 <div class="row">
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="..." alt="...">
+            <img src="https://placeimg.com/640/480/any" alt="...">
+            <div class="caption">
+                <h3>Thumbnail label</h3>
+                <p>...</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+        </div>
+
+        <div class="thumbnail">
+            <img src="https://placeimg.com/640/480/any" alt="...">
             <div class="caption">
                 <h3>Thumbnail label</h3>
                 <p>...</p>
