--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                 <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
             </div>
         </div>
+        </div>
 
+    <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
             <img src="https://placeimg.com/640/480/any" alt="...">
             <div class="caption">
