--- a/index.html
+++ b/index.html
@@ -73,14 +73,27 @@
     </div><!-- /.container-fluid -->
 </nav>
 
+<div class="page-header">
+    <h1>Example page header <small>Subtext for header</small></h1>
+</div>
+
+<div class="item">
+    <img src="https://placeimg.com/400/200/any" alt="...">
+    <div class="carousel-caption">
+        <h3>...</h3>
+        <p>...</p>
+    </div>
+</div>
+
 <div class="row">
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
             <img src="https://placeimg.com/250/200/any" alt="...">
             <div class="caption">
                 <h3>Thumbnail label</h3>
-                <p>...</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                <p>text</p>
+                <p><a href="#" class="btn btn-primary" role="button">read</a>
+                    <a href="#" class="btn btn-default" role="button">view</a></p>
             </div>
         </div>
         </div>
@@ -90,11 +103,25 @@
             <img src="https://placeimg.com/250/200/any" alt="...">
             <div class="caption">
                 <h3>Thumbnail label</h3>
-                <p>...</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                <p>text</p>
+                <p><a href="#" class="btn btn-primary" role="button">read</a>
+                    <a href="#" class="btn btn-default" role="button">view</a></p>
             </div>
         </div>
     </div>
+
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="https://placeimg.com/250/200/any" alt="...">
+            <div class="caption">
+                <h3>Thumbnail label</h3>
+                <p>text</p>
+                <p><a href="#" class="btn btn-primary" role="button">read</a>
+                    <a href="#" class="btn btn-default" role="button">view</a></p>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
