--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     </h1>
 </div>
 
+<div class="col-sm-6 col-md-4">
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -94,7 +95,7 @@
     <div class="carousel-inner" role="listbox">
 
         <div class="item active">
-            <img src="https://placeimg.com/600/250/any" alt="...">
+            <img src="https://placeimg.com/600/250/arch" alt="...">
             <div class="carousel-caption">
                 <h3>...</h3>
                 <p>...</p>
@@ -122,9 +123,10 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+    </div>
 
 <div class="row">
-    <div class="col-sm-6 col-md-4">
+    <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
             <img src="https://placeimg.com/250/200/any" alt="...">
             <div class="caption">
@@ -136,7 +138,7 @@
         </div>
     </div>
 
-    <div class="col-sm-6 col-md-4">
+    <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
             <img src="https://placeimg.com/250/200/any" alt="...">
             <div class="caption">
@@ -148,7 +150,7 @@
         </div>
     </div>
 
-    <div class="col-sm-6 col-md-4">
+    <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
             <img src="https://placeimg.com/250/200/any" alt="...">
             <div class="caption">
