--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </h1>
 </div>
 
-<div class="col-sm-6 col-md-4">
+<div class="bs-example" data-example-id="carousel-with-captions">
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -95,18 +95,18 @@
     <div class="carousel-inner" role="listbox">
 
         <div class="item active">
-            <img src="https://placeimg.com/600/250/arch" alt="...">
+            <img src="https://placeimg.com/900/500/arch" alt="...">
             <div class="carousel-caption">
-                <h3>...</h3>
-                <p>...</p>
+                <h3>header</h3>
+                <p>text</p>
             </div>
         </div>
 
         <div class="item">
-            <img src="https://placeimg.com/600/250/any" alt="...">
+            <img src="https://placeimg.com/900/500/any" alt="...">
             <div class="carousel-caption">
-                <h3>...</h3>
-                <p>...</p>
+                <h3>header</h3>
+                <p>text</p>
             </div>
         </div>
 
