--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Ben's Portfolio</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -30,13 +30,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">Home</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="#">CV <span class="sr-only">(current)</span></a></li>
                 <li><a href="/blog">Blog</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -77,8 +77,8 @@
 </nav>
 
 <div class="page-header">
-    <h1>Example page header
-        <small>Subtext for header</small>
+    <h1>Ben's Portfolio
+        <small>and lots lots more ...</small>
     </h1>
 </div>
 
@@ -97,7 +97,7 @@
 
     <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
-            <img src="https://placeimg.com/250/200/any" alt="...">
+            <img src="https://placeimg.com/250/200/nature" alt="...">
             <div class="caption">
                 <h3>Thumbnail label</h3>
                 <p>text</p>
@@ -109,7 +109,19 @@
 
     <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
-            <img src="https://placeimg.com/250/200/any" alt="...">
+            <img src="https://placeimg.com/250/200/tech" alt="...">
+            <div class="caption">
+                <h3>Thumbnail label</h3>
+                <p>text</p>
+                <p><a href="#" class="btn btn-primary" role="button">read</a>
+                    <a href="#" class="btn btn-default" role="button">view</a></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+            <img src="https://placeimg.com/250/200/people" alt="...">
             <div class="caption">
                 <h3>Thumbnail label</h3>
                 <p>text</p>
