--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">CV <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">CV<span class="sr-only">(current)</span></a></li>
                 <li><a href="/blog">Blog</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -80,6 +80,12 @@
     <h1>Ben's Portfolio
         <small>and lots lots more ...</small>
     </h1>
+</div>
+
+<div class="jumbotron">
+    <h1>Hello, world!</h1>
+    <p>introduction text</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
 
 <div class="row">
