--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -82,59 +82,58 @@
     </h1>
 </div>
 
-<div class="jumbotron">
-    <h1>Hello, world!</h1>
-    <p>introduction text</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+<div class="jumbotron"><h1>Hello, world!</h1>
+    <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or
+        information.</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p></div>
+
+<div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+        <img src="https://placeimg.com/250/200/any" alt="...">
+        <div class="caption">
+            <h3>Thumbnail label</h3>
+            <p>text</p>
+            <p><a href="#" class="btn btn-primary" role="button">read</a>
+                <a href="#" class="btn btn-default" role="button">view</a></p>
+        </div>
+    </div>
 </div>
 
-    <div class="col-sm-6 col-md-3">
-        <div class="thumbnail">
-            <img src="https://placeimg.com/250/200/any" alt="...">
-            <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p>text</p>
-                <p><a href="#" class="btn btn-primary" role="button">read</a>
-                    <a href="#" class="btn btn-default" role="button">view</a></p>
-            </div>
+<div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+        <img src="https://placeimg.com/250/200/nature" alt="...">
+        <div class="caption">
+            <h3>Thumbnail label</h3>
+            <p>text</p>
+            <p><a href="#" class="btn btn-primary" role="button">read</a>
+                <a href="#" class="btn btn-default" role="button">view</a></p>
         </div>
     </div>
+</div>
 
-    <div class="col-sm-6 col-md-3">
-        <div class="thumbnail">
-            <img src="https://placeimg.com/250/200/nature" alt="...">
-            <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p>text</p>
-                <p><a href="#" class="btn btn-primary" role="button">read</a>
-                    <a href="#" class="btn btn-default" role="button">view</a></p>
-            </div>
+<div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+        <img src="https://placeimg.com/250/200/tech" alt="...">
+        <div class="caption">
+            <h3>Thumbnail label</h3>
+            <p>text</p>
+            <p><a href="#" class="btn btn-primary" role="button">read</a>
+                <a href="#" class="btn btn-default" role="button">view</a></p>
         </div>
     </div>
+</div>
 
-    <div class="col-sm-6 col-md-3">
-        <div class="thumbnail">
-            <img src="https://placeimg.com/250/200/tech" alt="...">
-            <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p>text</p>
-                <p><a href="#" class="btn btn-primary" role="button">read</a>
-                    <a href="#" class="btn btn-default" role="button">view</a></p>
-            </div>
+<div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+        <img src="https://placeimg.com/250/200/people" alt="...">
+        <div class="caption">
+            <h3>Thumbnail label</h3>
+            <p>text</p>
+            <p><a href="#" class="btn btn-primary" role="button">read</a>
+                <a href="#" class="btn btn-default" role="button">view</a></p>
         </div>
     </div>
-
-    <div class="col-sm-6 col-md-3">
-        <div class="thumbnail">
-            <img src="https://placeimg.com/250/200/people" alt="...">
-            <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p>text</p>
-                <p><a href="#" class="btn btn-primary" role="button">read</a>
-                    <a href="#" class="btn btn-default" role="button">view</a></p>
-            </div>
-        </div>
-    </div>
+</div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
