--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#">CV<span class="sr-only">(current)</span></a></li>
+                <li><a href="#">CV 123<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">update</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
