--- a/index.html
+++ b/index.html
@@ -125,8 +125,15 @@
 
 <div class="row featurette">
     <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">About Me. <span class="text-muted">Hi, Im Ben and im a Developer.</span></h2>
+        <p class="lead">
+           Hi, <br>
+            I love to code, programme and explore...
+        </p>
+        <p>
+            I Love sci-fi books, I love traveling around our wonderful country at the weekends. I love to stay up to date with the latest code and science news.
+            If you want to learn more about me checkout <a href="#aboutme">About Me</a> or <a href="#blog">My Blog</a> pages.
+        </p>
     </div>
     <div class="col-md-5">
         <img class="featurette-image img-responsive center-block" data-src="image/ben.jpg" alt="Generic placeholder image">
@@ -157,6 +164,29 @@
         </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
+    <!-- START THE FEATURETTES -->
+    <div class="container marketing">
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+            <div class="col-md-7">
+                <h2 class="featurette-heading">Contact Me.</h2>
+                <p class="lead">
+                    Hi, <br>
+                    I love to code, programme and explore...
+                </p>
+                <p>
+                    I Love sci-fi books, I love traveling around our wonderful country at the weekends. I love to stay up to date with the latest code and science news.
+                    If you want to learn more about me checkout <a href="#aboutme">About Me</a> or <a href="#blog">My Blog</a> pages.
+                </p>
+            </div>
+            <div class="col-md-5">
+                <img class="featurette-image img-responsive center-block" data-src="image/contact.jpg" alt="Generic placeholder image">
+            </div>
+        </div>
+
+        <!-- /END THE FEATURETTES -->
 
     <!-- FOOTER -->
     <footer>
