--- a/index.html
+++ b/index.html
@@ -129,14 +129,13 @@
         <p class="lead">
            Hi, <br>
             I love to code, programme and explore...
-        </p>
-        <p>
+        <br>
             I Love sci-fi books, I love traveling around our wonderful country at the weekends. I love to stay up to date with the latest code and science news.
             If you want to learn more about me checkout <a href="#aboutme">About Me</a> or <a href="#blog">My Blog</a> pages.
         </p>
     </div>
     <div class="col-md-5">
-        <img class="featurette-image img-responsive center-block" data-src="image/ben.jpg" alt="Generic placeholder image">
+        <img class="featurette-image img-responsive center-block" src="image/ben.jpg" alt="Me (on the left)">
     </div>
 </div>
 
