basic front page

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             I love to code, programme and explore...
         <br>
             I Love sci-fi books, I love traveling around our wonderful country at the weekends. I love to stay up to date with the latest code and science news.
-            If you want to learn more about me checkout <a href="#aboutme">About Me</a> or <a href="#blog">My Blog</a> pages.
+            If you want to learn more about me checkout <a href="#blog">My Blog</a>.
         </p>
     </div>
     <div class="col-md-5">
@@ -146,20 +146,20 @@
         <div class="col-lg-4">
             <img class="img-circle" src="image/work.png" alt="Generic placeholder image" width="140" height="140">
             <h2>My Work</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <p>This is where I list projects I have worked on and explain a bit about them.</p>
+            <p><a class="btn btn-success" href="work" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="img-circle" src="image/cv.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>My CV</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <p>My CV, It is avalible for download in PDF format.</p>
+            <p><a class="btn btn-success" href="cv" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="img-circle" src="image/blog.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>My Blog</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <p>My Blog will have post on development and research, what i am doing and developing in my free time.</p>
+            <p><a class="btn btn-success" href="blog" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -172,12 +172,10 @@
             <div class="col-md-7">
                 <h2 class="featurette-heading">Contact Me.</h2>
                 <p class="lead">
-                    Hi, <br>
-                    I love to code, programme and explore...
+                    Feel free to contact me on though social media platforms, and see my GIT account and STACK.
                 </p>
                 <p>
-                    I Love sci-fi books, I love traveling around our wonderful country at the weekends. I love to stay up to date with the latest code and science news.
-                    If you want to learn more about me checkout <a href="#aboutme">About Me</a> or <a href="#blog">My Blog</a> pages.
+                   Email address: benoats@gmail.com
                 </p>
             </div>
             <div class="col-md-5">
