--- a/index.html
+++ b/index.html
@@ -186,8 +186,12 @@
         <!-- /END THE FEATURETTES -->
 
     <!-- FOOTER -->
-    <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
+    <div>
+        <p class="pull-right">
+        <div class="btn-group dropup">
+        <p><a class="btn btn-secondary dropdown-toggle" href="#" role="button">Back to top</a></p>
+        </div>
+
         <p>&copy; Benjamin Graham Oats, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
 
