--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">CV</a></li>
-                        <li><a href="#contact">Blog</a></li>
-                        <li><a href="#contact">Work</a></li>
+                        <li><a href="cv">CV</a></li>
+                        <li><a href="blog">Blog</a></li>
+                        <li><a href="work">Work</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -129,7 +129,7 @@
             I love to code, programme and explore...
         <br>
             I Love sci-fi books, I love traveling around our wonderful country at the weekends. I love to stay up to date with the latest code and science news.
-            If you want to learn more about me checkout <a href="#blog">My Blog</a>.
+            If you want to learn more about me checkout <a href="blog">My Blog</a>.
         </p>
     </div>
     <div class="col-md-5">
@@ -188,10 +188,7 @@
     <!-- FOOTER -->
     <div>
         <p class="pull-right">
-        <div class="btn-group dropup">
-        <p><a class="btn btn-secondary dropdown-toggle" href="#" role="button">Back to top</a></p>
-        </div>
-
+        <a href="#">Back to top</a></p>
         <p>&copy; Benjamin Graham Oats, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
 
