--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Portfolio</a>
+                    <a class="navbar-brand" href="index">Portfolio</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
+                        <li class="active"><a href="index">Home</a></li>
                         <li><a href="cv">CV</a></li>
                         <li><a href="blog">Blog</a></li>
                         <li><a href="work">Work</a></li>
@@ -118,8 +118,9 @@
 ================================================== -->
 <!-- Wrap the rest of the page in another container to center all the content. -->
 
-<!-- START THE FEATURETTES -->
 <div class="container marketing">
+    
+<!-- START THE FEATURETTES -->
 
 <div class="row featurette">
     <div class="col-md-7">
