--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index">Portfolio</a>
+                    <a class="navbar-brand" href="index.html">Portfolio</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index">Home</a></li>
-                        <li><a href="cv">CV</a></li>
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="cv.html">CV</a></li>
                         <li><a href="blog">Blog</a></li>
                         <li><a href="work">Work</a></li>
                             </ul>
@@ -119,7 +119,7 @@
 <!-- Wrap the rest of the page in another container to center all the content. -->
 
 <div class="container marketing">
-    
+
 <!-- START THE FEATURETTES -->
 
 <div class="row featurette">
