--- a/cv.html
+++ b/cv.html
@@ -120,8 +120,9 @@
 
 <div class="container marketing">
 
-
-
+    <object data="pdf/ben_oats_cv_2016.pdf" type="application/pdf" width="300" height="200">
+        alt : <a href="pdf/ben_oats_cv_2016.pdf">My CV</a>
+    </object>
 
 
     <!-- START THE FEATURETTES -->
