--- a/cv.html
+++ b/cv.html
@@ -26,6 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
     <!--<link href="carousel.css" rel="stylesheet">-->
 </head>
 <!-- NAVBAR
@@ -120,10 +121,9 @@
 
 <div class="container marketing">
 
-    <object data="pdf/ben_oats_cv_2016.pdf" type="application/pdf" width="300" height="200">
-        alt : <a href="pdf/ben_oats_cv_2016.pdf">My CV</a>
+    <object class="infographic" data="pdf/ben_oats_cv_2016.pdf"
+            type="application/pdf" internalinstanceid="3" title="">
     </object>
-
 
     <!-- START THE FEATURETTES -->
     <div class="container marketing">
