--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="cv.html">CV</a></li>
                         <li><a href="blog">Blog</a></li>
-                        <li><a href="work">Work</a></li>
+                        <li><a href="work.html">Work</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -148,13 +148,13 @@
             <img class="img-circle" src="image/work.png" alt="Generic placeholder image" width="140" height="140">
             <h2>My Work</h2>
             <p>This is where I list projects I have worked on and explain a bit about them.</p>
-            <p><a class="btn btn-success" href="work" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-success" href="work.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="img-circle" src="image/cv.jpg" alt="Generic placeholder image" width="140" height="140">
             <h2>My CV</h2>
             <p>My CV, It is avalible for download in PDF format.</p>
-            <p><a class="btn btn-success" href="cv" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-success" href="cv.html" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
             <img class="img-circle" src="image/blog.jpg" alt="Generic placeholder image" width="140" height="140">
