--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,6 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
     <!--<link href="carousel.css" rel="stylesheet">-->
 </head>
 <!-- NAVBAR
@@ -44,14 +43,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index">Portfolio</a>
+                    <a class="navbar-brand" href="index.html">Portfolio</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index">Home</a></li>
-                        <li><a href="cv">CV</a></li>
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="cv.html">CV</a></li>
                         <li><a href="blog">Blog</a></li>
-                        <li><a href="work">Work</a></li>
+                        <li><a href="work.html">Work</a></li>
                     </ul>
                     </li>
                     </ul>
