--- a/cv.html
+++ b/cv.html
@@ -129,6 +129,7 @@
             You can <a href="pdf/ben_oats_cv_2016.pdf">click here to download the PDF</a>.
         </p>
     </object>
+    <object class="infographic" data="pdf/ben_oats_cv_2016.pd" type="application/pdf" internalinstanceid="3"></object>
 
     <!-- START THE FEATURETTES -->
     <div class="container marketing">
