--- a/cv.html
+++ b/cv.html
@@ -120,15 +120,15 @@
 
 <div class="container marketing">
 
-    <object class="infographic" data="pdf/ben_oats_cv_2016.pdf"
-        data="pdf/ben_oats_cv_2016.pdf#toolbar=1&amp;navpanes=0&amp;scrollbar=1&amp;page=3&amp;view=FitV"
-        type="application/pdf">
+    <!--<object class="infographic" data="pdf/ben_oats_cv_2016.pdf"-->
+        <!--data="pdf/ben_oats_cv_2016.pdf#toolbar=1&amp;navpanes=0&amp;scrollbar=1&amp;page=3&amp;view=FitV"-->
+        <!--type="application/pdf">-->
 
-        <p>It appears you don't have a PDF plugin for this browser.
-            No problem though...
-            You can <a href="pdf/ben_oats_cv_2016.pdf">click here to download the PDF</a>.
-        </p>
-    </object>
+        <!--<p>It appears you don't have a PDF plugin for this browser.-->
+            <!--No problem though...-->
+            <!--You can <a href="pdf/ben_oats_cv_2016.pdf">click here to download the PDF</a>.-->
+        <!--</p>-->
+    <!--</object>-->
     <object class="infographic" data="pdf/ben_oats_cv_2016.pd" type="application/pdf" internalinstanceid="3"></object>
 
     <!-- START THE FEATURETTES -->
