--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <!--<link href="carousel.css" rel="stylesheet">-->
+    <link href="style.css" rel="stylesheet">
 </head>
 <!-- NAVBAR
 ================================================== -->
@@ -120,16 +120,15 @@
 
 <div class="container marketing">
 
-    <!--<object class="infographic" data="pdf/ben_oats_cv_2016.pdf"-->
-        <!--data="pdf/ben_oats_cv_2016.pdf#toolbar=1&amp;navpanes=0&amp;scrollbar=1&amp;page=3&amp;view=FitV"-->
-        <!--type="application/pdf">-->
+    <object class="infographic" data="pdf/ben_oats_cv_2016.pdf"
+        data="pdf/ben_oats_cv_2016.pdf#toolbar=1&amp;navpanes=0&amp;scrollbar=1&amp;page=3&amp;view=FitV"
+        type="application/pdf">
 
-        <!--<p>It appears you don't have a PDF plugin for this browser.-->
-            <!--No problem though...-->
-            <!--You can <a href="pdf/ben_oats_cv_2016.pdf">click here to download the PDF</a>.-->
-        <!--</p>-->
-    <!--</object>-->
-    <object class="infographic" data="pdf/ben_oats_cv_2016.pd" type="application/pdf" internalinstanceid="3"></object>
+        <p>It appears you don't have a PDF plugin for this browser.
+            No problem though...
+            You can <a href="pdf/ben_oats_cv_2016.pdf">click here to download the PDF</a>.
+        </p>
+    </object>
 
     <!-- START THE FEATURETTES -->
     <div class="container marketing">
