--- a/work.html
+++ b/work.html
@@ -137,10 +137,10 @@
 
         <!-- Tab panes -->
         <div class="tab-content">
-            <div role="tabpanel" class="tab-pane active" id="home">...</div>
-            <div role="tabpanel" class="tab-pane" id="profile">...</div>
-            <div role="tabpanel" class="tab-pane" id="messages">...</div>
-            <div role="tabpanel" class="tab-pane" id="settings">...</div>
+            <div role="tabpanel" class="tab-pane active" id="home">one</div>
+            <div role="tabpanel" class="tab-pane" id="profile">2</div>
+            <div role="tabpanel" class="tab-pane" id="messages">three</div>
+            <div role="tabpanel" class="tab-pane" id="settings">4</div>
         </div>
 
     </div>
