--- a/work.html
+++ b/work.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,7 +36,8 @@
         <nav class="navbar navbar-inverse navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                            aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -124,63 +124,69 @@
 
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">On Going Projects</a></li>
-            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Free Lance Work</a></li>
-            <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Unfinished</a></li>
+            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">On
+                Going Projects</a></li>
+            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Free Lance
+                Work</a></li>
+            <li role="presentation"><a href="#messages" aria-controls="messages" role="tab"
+                                       data-toggle="tab">Unfinished</a></li>
         </ul>
 
+        <!-- Tab panes -->
         <!-- Tab panes -->
         <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="home">
 
+
+
                 <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="http://placehold.it/242x200" alt="...">
-                            <div class="caption">
-                                <h3>Thumbnail label</h3>
-                                <p>...</p>
-                                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                    <div class="col-xs-6 col-sm-3">
+                        <div class="thumbnail"><img src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">
+                            <div class="caption"><h3>Jesus Christ Superstar</h3>
+                                <p>This website was built to demonstrate design in building a ticket booking website, to form has many parts and is built with jQuery.</p>
+                                <p>
+                                    <a href="http://www.bexbase.com/leighgardencentre/" target="_blank" class="btn btn-primary" role="button">Visit Website</a>
+                                </p>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="http://placehold.it/242x200" alt="...">
-                            <div class="caption">
-                                <h3>Thumbnail label</h3>
-                                <p>...</p>
-                                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-3">
+                            <div class="thumbnail"><img src="image/websites/LeighGardenCentre.png" alt="LeighGardenCentre">
+                                <div class="caption"><h3>Leigh Garden Centre</h3>
+                                    <p>This website was built for a free lance client in 2012, unfortunately the sale never happen and the client sold the business. </p>
+                                    <p>
+                                        <a href="http://bexbase.com/benswork/" target="_blank" class="btn btn-primary" role="button">Visit Website</a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="http://placehold.it/242x200" alt="...">
-                            <div class="caption">
-                                <h3>Thumbnail label</h3>
-                                <p>...</p>
-                                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-3">
+                                <div class="thumbnail"><img src="image/websites/TwitterQuery.png" alt="TwitterQuery">
+                                    <div class="caption"><h3>Twitter Query</h3>
+                                        <p>This website was built as a project to query all tweets under a string term.</p>
+                                        <p>
+                                            <a href="http://bexbase.com//test2/" target="_blank" class="btn btn-primary" role="button">Visit Website</a>
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
-            <div role="tabpanel" class="tab-pane" id="profile">2</div>
-            <div role="tabpanel" class="tab-pane" id="messages">three</div>
-            <div role="tabpanel" class="tab-pane" id="settings">4</div>
+
+            <div role="tabpanel" class="tab-pane" id="profile">5</div>
+            <div role="tabpanel" class="tab-pane" id="messages">...</div>
+            <div role="tabpanel" class="tab-pane" id="settings">...</div>
         </div>
 
-    </div>
+        </div>
 
-    <!-- START THE FEATURETTES -->
+
+
+
+        <!-- START THE FEATURETTES -->
     <div class="container marketing">
 
         <hr class="featurette-divider">
@@ -196,7 +202,8 @@
                 </p>
             </div>
             <div class="col-md-5">
-                <img class="featurette-image img-responsive center-block" src="image/contact.jpg" alt="Generic placeholder image">
+                <img class="featurette-image img-responsive center-block" src="image/contact.jpg"
+                     alt="Generic placeholder image">
             </div>
         </div>
 
