--- a/work.html
+++ b/work.html
@@ -63,106 +63,109 @@
 
 <div class="container marketing">
 
-    <div>
 
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">On
-                Going Projects</a></li>
-            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Free Lance
-                Work</a></li>
-            <li role="presentation"><a href="#messages" aria-controls="messages" role="tab"
-                                       data-toggle="tab">Unfinished</a></li>
-        </ul>
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">On
+            Going Projects</a></li>
+        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Free Lance
+            Work</a></li>
+        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab"
+                                   data-toggle="tab">Unfinished</a></li>
+    </ul>
 
-        <!-- Tab panes -->
-        <div class="tab-content">
-            <div role="tabpanel" class="tab-pane active" id="home">
+    <!-- Tab panes -->
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane active" id="home">
 
-                    <div class="col-xs-6 col-sm-3">
-                        <div class="thumbnail"><img src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">
-                            <div class="caption"><h3>Jesus Christ Superstar</h3>
-                                <p>This website was built to demonstrate design in building a ticket booking website, to form has many parts and is built with jQuery.</p>
-                                <p>
-                                    <a href="http://www.bexbase.com/leighgardencentre/" target="_blank" class="btn btn-primary" role="button">Visit Website</a>
-                                </p>
-                            </div>
-                        </div>
+            <div class="col-xs-6 col-sm-3">
+                <div class="thumbnail"><img src="image/websites/JesusChristSuperstar.png" alt="JesusChristSuperstar">
+                    <div class="caption"><h3>Jesus Christ Superstar</h3>
+                        <p>This website was built to demonstrate design in building a ticket booking website, to form
+                            has many parts and is built with jQuery.</p>
+                        <p>
+                            <a href="http://www.bexbase.com/leighgardencentre/" target="_blank" class="btn btn-primary"
+                               role="button">Visit Website</a>
+                        </p>
                     </div>
+                </div>
+            </div>
 
-                        <div class="col-xs-6 col-sm-3">
-                            <div class="thumbnail"><img src="image/websites/LeighGardenCentre.png" alt="LeighGardenCentre">
-                                <div class="caption"><h3>Leigh Garden Centre</h3>
-                                    <p>This website was built for a free lance client in 2012, unfortunately the sale never happen and the client sold the business. </p>
-                                    <p>
-                                        <a href="http://bexbase.com/benswork/" target="_blank" class="btn btn-primary" role="button">Visit Website</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+            <div class="col-xs-6 col-sm-3">
+                <div class="thumbnail"><img src="image/websites/LeighGardenCentre.png" alt="LeighGardenCentre">
+                    <div class="caption"><h3>Leigh Garden Centre</h3>
+                        <p>This website was built for a free lance client in 2012, unfortunately the sale never happen
+                            and the client sold the business. </p>
+                        <p>
+                            <a href="http://bexbase.com/benswork/" target="_blank" class="btn btn-primary"
+                               role="button">Visit Website</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
 
-                            <div class="col-xs-6 col-sm-3">
-                                <div class="thumbnail"><img src="image/websites/TwitterQuery.png" alt="TwitterQuery">
-                                    <div class="caption"><h3>Twitter Query</h3>
-                                        <p>This website was built as a project to query all tweets under a string term.</p>
-                                        <p>
-                                            <a href="http://bexbase.com//test2/" target="_blank" class="btn btn-primary" role="button">Visit Website</a>
-                                        </p>
-                                    </div>
-                                </div>
-
+            <div class="col-xs-6 col-sm-3">
+                <div class="thumbnail"><img src="image/websites/TwitterQuery.png" alt="TwitterQuery">
+                    <div class="caption"><h3>Twitter Query</h3>
+                        <p>This website was built as a project to query all tweets under a string term.</p>
+                        <p>
+                            <a href="http://bexbase.com//test2/" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
 </div>
-
-
+        
             <div role="tabpanel" class="tab-pane" id="profile">5</div>
-            <div role="tabpanel" class="tab-pane" id="messages">...</div>
-            <div role="tabpanel" class="tab-pane" id="settings">...</div>
+            <div role="tabpanel" class="tab-pane" id="messages">6</div>
+            <div role="tabpanel" class="tab-pane" id="settings">7</div>
+
+    </div>
+
+
+    <!-- START THE FEATURETTES -->
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h2 class="featurette-heading">Contact Me.</h2>
+            <p class="lead">
+                Feel free to contact me on though social media platforms, and see my GIT account and STACK.
+            </p>
+            <p>
+                Email address: benoats@gmail.com
+            </p>
         </div>
-
+        <div class="col-md-5">
+            <img class="featurette-image img-responsive center-block" src="image/contact.jpg"
+                 alt="Generic placeholder image">
         </div>
+    </div>
+
+    <!-- /END THE FEATURETTES -->
+
+    <!-- FOOTER -->
+    <div>
+        <p class="pull-right">
+            <a href="#">Back to top</a></p>
+        <p>&copy; Benjamin Graham Oats, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        </footer>
+
+    </div><!-- /.container -->
 
 
-        <!-- START THE FEATURETTES -->
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-            <div class="col-md-7">
-                <h2 class="featurette-heading">Contact Me.</h2>
-                <p class="lead">
-                    Feel free to contact me on though social media platforms, and see my GIT account and STACK.
-                </p>
-                <p>
-                    Email address: benoats@gmail.com
-                </p>
-            </div>
-            <div class="col-md-5">
-                <img class="featurette-image img-responsive center-block" src="image/contact.jpg"
-                     alt="Generic placeholder image">
-            </div>
-        </div>
-
-        <!-- /END THE FEATURETTES -->
-
-        <!-- FOOTER -->
-        <div>
-            <p class="pull-right">
-                <a href="#">Back to top</a></p>
-            <p>&copy; Benjamin Graham Oats, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-            </footer>
-
-        </div><!-- /.container -->
-
-
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
-        <script src="js/bootstrap.min.js"></script>
-        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-        <script src="js/vendor/holder.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="js/ie10-viewport-bug-workaround.js"></script>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="js/vendor/holder.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
+</div>
 </body>
 </html>
