--- a/work.html
+++ b/work.html
@@ -48,7 +48,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.phtml">Home</a></li>
-                        <li><a href="cv.html">CV</a></li>
+                        <li><a href="cv.phtml">CV</a></li>
                         <li><a href="blog">Blog</a></li>
                         <li><a href="work.html">Work</a></li>
                     </ul>
@@ -116,7 +116,7 @@
                 </div>
             </div>
 </div>
-        
+
             <div role="tabpanel" class="tab-pane" id="profile">5</div>
             <div role="tabpanel" class="tab-pane" id="messages">6</div>
             <div role="tabpanel" class="tab-pane" id="settings">7</div>
