--- a/work.html
+++ b/work.html
@@ -115,11 +115,36 @@
                     </div>
                 </div>
             </div>
-</div>
 
-            <div role="tabpanel" class="tab-pane" id="profile">5</div>
-            <div role="tabpanel" class="tab-pane" id="messages">6</div>
-            <div role="tabpanel" class="tab-pane" id="settings">7</div>
+            <div class="col-xs-6 col-sm-3">
+                <div class="thumbnail"><img src="image/websites/PopOutImage.png" alt="PopOutImage">
+                    <div class="caption"><h3>Pop Out Image Gallery</h3>
+                        <p>This is built using jQuery as part of a gallery i was building for a client.</p>
+                        <p>
+                            <a href="http://bexbase.com//test/" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xs-6 col-sm-3">
+                <div class="thumbnail"><img src="image/websites/bmWood.png" alt="PopOutImage">
+                    <div class="caption"><h3>BM Wood</h3>
+                        <p>This is a client website built in 3 different languages, the system also allows client to upload photos.</p>
+                        <p>
+                            <a href="http://www.bmwood.co.uk/" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div role="tabpanel" class="tab-pane" id="profile">5</div>
+        <div role="tabpanel" class="tab-pane" id="messages">6</div>
+        <div role="tabpanel" class="tab-pane" id="settings">7</div>
 
     </div>
 
