--- a/work.html
+++ b/work.html
@@ -152,6 +152,18 @@
                 </div>
             </div>
 
+            <div class="col-xs-6 col-sm-3">
+                <div class="thumbnail"><img src="image/websites/BexBase.png" alt="PopOutImage">
+                    <div class="caption"><h3>BexBase Development</h3>
+                        <p>This is a website that was built as a marketing website for freelance work in 2011.</p>
+                        <p>
+                            <a href="http://bexbase.com/index.php" target="_blank" class="btn btn-primary" role="button">Visit
+                                Website</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div role="tabpanel" class="tab-pane" id="profile">5</div>
