--- a/work.html
+++ b/work.html
@@ -57,21 +57,17 @@
                 </div>
             </div>
         </nav>
-
+        
     </div>
 </div>
 
 <div class="container marketing">
 
-
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">On
-            Going Projects</a></li>
-        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Free Lance
-            Work</a></li>
-        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab"
-                                   data-toggle="tab">Unfinished</a></li>
+        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Personal Projects</a></li>
+        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Commercial Products</a></li>
+        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Sites I Have Worked On</a></li>
     </ul>
 
     <!-- Tab panes -->
@@ -166,9 +162,8 @@
 
         </div>
 
-        <div role="tabpanel" class="tab-pane" id="profile">5</div>
-        <div role="tabpanel" class="tab-pane" id="messages">6</div>
-        <div role="tabpanel" class="tab-pane" id="settings">7</div>
+        <div role="tabpanel" class="tab-pane" id="profile">coming soon....</div>
+        <div role="tabpanel" class="tab-pane" id="messages">coming soon....</div>
 
     </div>
 
